# news-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  config.yaml  pyproject.toml
.github/workflows/: daily.yml
docs/: ROADMAP.md
docs/decisions/: 0001-llm-output-format.md  0002-source-based-categorization.md  0003-external-trigger-over-github-cron.md  README.md
src/news_agent/: __init__.py  __main__.py  cli.py  config.py  logger.py  models.py  rank.py
src/news_agent/delivery/: __init__.py  render.py  sender.py  service.py
src/news_agent/fetch/: __init__.py  abstracts.py  cache.py  constants.py  hn.py  rss.py  service.py
src/news_agent/summarize/: __init__.py  abstracts.py  anthropic_provider.py  openai_compatible.py  parser.py  prompt.py  service.py
tests/integration/: test_fetch_live.py
tests/unit/: test_cache.py  test_config.py  test_delivery.py  test_fetch.py  test_rank.py  test_summarize.py
