[project]
name = "news-agent"
version = "0.1.0"
description = "Daily news digest agent — fetch, rank, summarize and email the hottest stories per category."
authors = [{name = "Praveen Ilangovan", email = "praveen.ilangovan@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "structlog (>=25.5.0,<26.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "feedparser (>=6.0.11,<7.0.0)",
    "anthropic (>=0.86.0,<0.87.0)",
    "openai (>=2.2.0,<3.0.0)",
    "typer (>=0.21.1,<0.22.0)",
    "rich (>=14.0.0,<15.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
]

[project.scripts]
news-agent = "news_agent.cli:main"

[tool.poetry]
packages = [{include = "news_agent", from = "src"}]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.4.0"
pytest = "^9.0.1"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit the network or live APIs",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

# Typer's command decorators are untyped; relax only that check for the CLI module.
[[tool.mypy.overrides]]
module = "news_agent.cli"
disallow_untyped_decorators = false
